# odoo-views-dsl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENT_GUIDE.md  DESIGN_DECISIONS.md  SIDE_BY_SIDE.md
examples/crm_extension/: sale_order.py
examples/crm_extension/views/: _generated_views.xml
examples/warehouse_module/: views.py
examples/warehouse_module/views/: _generated_views.xml
odoo_views_dsl/: __init__.py  _registry.py  action.py  builders.py  cli.py  compiler.py  emitter.py  menu.py  nodes.py  settings.py  view.py
tests/: conftest.py  test_action.py  test_compiler.py  test_form_view.py  test_inheritance.py  test_list_view.py  test_menu.py  test_settings.py
